--- a/css/style.css
+++ b/css/style.css
@@ -319,61 +319,59 @@ svg.main-link {
   resize: none;
 }
 .form-coment:hover {
-border-color: var(--accent-color);
+  border-color: var(--accent-color);
 }
-.check-text {
+
+.modal-checkbox {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
   display: flex;
   align-items: center;
-  font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: #757575;
 }
-.check-text span {
+.checkbox-icon {
+  width: 16px;
+  height: 15px;
+  fill: #ffffff;
+  position: absolute;
+  z-index: 1;
+}
+.checkbox-input {
   width: 16px;
   height: 15px;
   margin-right: 7px;
-  border: 2px solid var(--primary-text-color);  
+  border: 2px solid var(--primary-text-color);
   border-radius: 2px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  appearance: none;
+  position: relative;
 }
-
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-}
-.policy-icon {
-fill: transparent;
-}
-.check-text:checked +
-
-
-
-
-
-
-
-
-
-
-.terms-agree {
-  padding-left: 5px;
+.modal-checkbox a {
   color: var(--accent-color);
-
+  padding-left: 5px;
 }
+.checkbox-input:checked {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+.modal-button {
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+  min-height: 50px;
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border-radius: 4px;
+  border: #188ce8;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  margin-top: 30px;
+  cursor: pointer;
+}
+
 /* features */
 .features {
   display: flex;
