--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ p {
   margin: 0;
 }
 
+
 ul {
   list-style: none;
   padding: 0;
@@ -868,6 +869,52 @@ svg.main-link {
 
 .contacts-nav__link:hover .item-link {
   fill: var(--accent-color);
+}
+
+/* рассылка */
+.mail-form {
+  margin-left: 93px;
+
+}
+.footer-sub {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+.mail-input {
+  width: 358px;
+  min-height: 50px;
+  background: transparent;
+  border: 1px solid #ffffff4d;
+  box-shadow: 0px 4px 4px 0px #00000026;
+  border-radius: 4px;
+  margin-right: 12px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  padding-left: 16px;
+}
+.mail-button {
+  width: 200px;
+  min-height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border: var(--accent-color);
+  border-radius: 4px;
+}
+.mail-send {
+  vertical-align: middle;
+  margin-left: 10px;
 }
 
 /* portfolio */
